--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "require": {
     "gabordemooij/redbean": "dev-master",
-    "sendpulse/rest-api": "^1.0"
+    "sendpulse/rest-api": "^1.0",
+    "dompdf/dompdf": "^0.8.5"
   }
 }
