--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,6 @@
   "require": {
     "gabordemooij/redbean": "dev-master",
     "sendpulse/rest-api": "^1.0",
-    "dompdf/dompdf": "^0.8.5"
+    "dompdf/dompdf": "^0.8.5",
   }
 }
