--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "require": {
     "gabordemooij/redbean": "dev-master",
     "dompdf/dompdf": "^0.8.5",
-    "phpmailer/phpmailer": "^6.1"
+    "phpmailer/phpmailer": "^6.1",
+    "snapappointments/bootstrap-select": "^1.13"
   }
 }
